--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -58,10 +58,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buses.cs" />
+    <Compile Include="Cars.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="Dispather.cs" />
+    <Compile Include="Driver.cs" />
+    <Compile Include="Mopeds.cs" />
+    <Compile Include="Motorcycles.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trucs.cs" />
+    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
